--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -174,7 +174,7 @@
 		<activity android:name="org.geometerplus.android.fbreader.network.AddCatalogMenuActivity" android:process=":networkLibrary" android:configChanges="orientation|keyboardHidden" android:theme="@android:style/Theme.Dialog"/>
 		<activity android:name="org.geometerplus.android.fbreader.network.AddCustomCatalogActivity" android:process=":networkLibrary" android:configChanges="orientation|keyboardHidden" android:theme="@android:style/Theme.Dialog">
 			<intent-filter>
-				<action android:name="android.fbreader.action.ADD_CUSTOM_CATALOG" />
+				<action android:name="android.fbreader.action.ADD_OPDS_CATALOG" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<data android:host="data.fbreader.org" android:scheme="http" android:path="/add_catalog/editUrl"/>
 			</intent-filter>
@@ -187,9 +187,9 @@
 		</activity>
 		<activity android:name="org.geometerplus.android.fbreader.network.ScanLocalNetworkActivity" android:process=":networkLibrary" android:theme="@android:style/Theme.Dialog" android:configChanges="orientation|keyboardHidden">
 			<intent-filter>
-				<action android:name="android.fbreader.action.ADD_CUSTOM_CATALOG" />
+				<action android:name="android.fbreader.action.ADD_OPDS_CATALOG" />
 				<category android:name="android.intent.category.DEFAULT" />
-				<data android:host="data.fbreader.org" android:scheme="http" android:path="/add_catalog/scanLocalNework"/>
+				<data android:host="data.fbreader.org" android:scheme="http" android:path="/add_catalog/scanLocalNetwork"/>
 			</intent-filter>
 		</activity>
 		<activity android:name="org.geometerplus.android.fbreader.network.AuthorizationMenuActivity" android:process=":networkLibrary" android:theme="@android:style/Theme.Dialog" android:configChanges="orientation|keyboardHidden"/>
