ZLFile class name should not be obfuscated

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -11,6 +11,7 @@
 -keep public class * extends android.content.BroadcastReceiver
 -keep public class * extends android.content.ContentProvider
 -keep class * extends java.lang.Exception
+-keep class org.geometerplus.zlibrary.core.filesystem.ZLFile
 
 -keepclasseswithmembernames class * {
     native <methods>;
