more proguard experiments

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -1,4 +1,5 @@
--optimizationpasses 5
+#-optimizationpasses 5
+-optimizationpasses 0
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
 -dontpreverify
@@ -11,7 +12,15 @@
 -keep public class * extends android.content.BroadcastReceiver
 -keep public class * extends android.content.ContentProvider
 -keep class * extends java.lang.Exception
+
 -keep class org.geometerplus.zlibrary.core.filesystem.ZLFile
+-keep class org.geometerplus.zlibrary.core.library.ZLibrary
+
+-keep class org.geometerplus.fbreader.formats.PluginCollection
+-keepclassmembers class org.geometerplus.fbreader.formats.PluginCollection {
+    public static ** Instance();
+    private <init>();
+}
 
 -keepclasseswithmembernames class * {
     native <methods>;
