--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -188,6 +188,12 @@
 			<intent-filter>
 				<action android:name="android.fbreader.action.ADD_OPDS_CATALOG_URL" />
 				<category android:name="android.intent.category.DEFAULT" />
+				<data android:host="*" android:scheme="http" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.fbreader.action.ADD_OPDS_CATALOG_URL" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:host="*" android:scheme="https" />
 			</intent-filter>
 		</activity>
 		<activity android:name="org.geometerplus.android.fbreader.network.AuthorizationMenuActivity" android:process=":networkLibrary" android:theme="@android:style/Theme.Dialog" android:configChanges="orientation|keyboardHidden"/>
