--- a/proguard.cfg
+++ b/proguard.cfg
@@ -12,7 +12,31 @@
 -keep public class * extends android.content.ContentProvider
 -keep class * extends java.lang.Exception
 
+-keep class org.geometerplus.zlibrary.core.library.ZLibrary
+-keepclassmembers class org.geometerplus.zlibrary.core.library.ZLibrary {
+    public static ** Instance();
+    public ** getVersionName();
+}
 -keep class org.geometerplus.zlibrary.core.filesystem.ZLFile
+-keepclassmembers class org.geometerplus.zlibrary.core.filesystem.ZLFile {
+    public static ** createFileByPath(**);
+    public ** children();
+    public boolean exists();
+    public boolean isDirectory();
+    public ** getInputStream();
+    public ** getPath();
+    public long size();
+}
+-keep class org.geometerplus.fbreader.formats.PluginCollection
+-keepclassmembers class org.geometerplus.fbreader.formats.PluginCollection {
+    public static ** Instance();
+}
+-keep class org.geometerplus.fbreader.library.Book
+-keepclassmembers class org.geometerplus.fbreader.library.Book {
+}
+-keep class org.geometerplus.fbreader.library.Tag
+-keepclassmembers class org.geometerplus.fbreader.library.Tag {
+}
 
 -keepclasseswithmembernames class * {
     native <methods>;
