--- a/proguard.cfg
+++ b/proguard.cfg
@@ -33,9 +33,14 @@
 }
 -keep class org.geometerplus.fbreader.library.Book
 -keepclassmembers class org.geometerplus.fbreader.library.Book {
+    public ** File;
+    public ** getTitle();
+    public ** getLanguage();
+    public ** getEncoding();
 }
 -keep class org.geometerplus.fbreader.library.Tag
 -keepclassmembers class org.geometerplus.fbreader.library.Tag {
+    public static ** getTag(**,**);
 }
 
 -keepclasseswithmembernames class * {
