--- a/proguard.cfg
+++ b/proguard.cfg
@@ -31,6 +31,10 @@
 -keepclassmembers class org.geometerplus.fbreader.formats.PluginCollection {
     public static ** Instance();
 }
+-keep class org.geometerplus.fbreader.Paths
+-keepclassmembers class org.geometerplus.fbreader.Paths {
+    public static ** cacheDirectory();
+}
 -keep class org.geometerplus.fbreader.library.Book
 -keepclassmembers class org.geometerplus.fbreader.library.Book {
     public ** File;
