synchronization with native branch

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -31,6 +31,9 @@
 -keepclassmembers class org.geometerplus.fbreader.formats.PluginCollection {
     public static ** Instance();
 }
+-keepclassmembers class org.geometerplus.fbreader.formats.FormatPlugin {
+    public ** supportedFileType();
+}
 -keep class org.geometerplus.fbreader.Paths
 -keepclassmembers class org.geometerplus.fbreader.Paths {
     public static ** cacheDirectory();
@@ -41,6 +44,12 @@
     public ** getTitle();
     public ** getLanguage();
     public ** getEncoding();
+    public void setTitle(**);
+    public void setSeriesInfo(**,float);
+    public void setLanguage(**);
+    public void setEncoding(**);
+    public void addAuthor(**,**);
+    public void addTag(**);
 }
 -keep class org.geometerplus.fbreader.library.Tag
 -keepclassmembers class org.geometerplus.fbreader.library.Tag {
