synchronization with native branch (readModel in JavaNativeFormatPlugin)

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -27,6 +27,7 @@
     public ** getPath();
     public long size();
 }
+-keep class org.geometerplus.zlibrary.text.model.ZLTextModel
 -keep class org.geometerplus.fbreader.formats.PluginCollection
 -keepclassmembers class org.geometerplus.fbreader.formats.PluginCollection {
     public static ** Instance();
@@ -54,6 +55,16 @@
 -keep class org.geometerplus.fbreader.library.Tag
 -keepclassmembers class org.geometerplus.fbreader.library.Tag {
     public static ** getTag(**,**);
+}
+-keep class org.geometerplus.fbreader.bookmodel.NativeBookModel
+-keepclassmembers class org.geometerplus.fbreader.bookmodel.NativeBookModel {
+		public ** Book;
+		public void initImageMap(**[],int[],int[],**,**,int);
+		public void initInternalHyperlinks(**,**,int);
+		public void initTOC(**,int[],int[]);
+		public ** createTextModel(**,**,int,int[],int[],int[],int[],byte[],**,**,int);
+		public void setBookTextModel(**);
+		public void setFootnoteModel(**);
 }
 
 -keepclasseswithmembernames class * {
