Encoding converter (in progress)

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -35,6 +35,14 @@
 -keepclassmembers class org.geometerplus.fbreader.formats.FormatPlugin {
     public ** supportedFileType();
 }
+-keep class org.geometerplus.fbreader.formats.Encoding
+-keep class org.geometerplus.fbreader.formats.JavaEncodingCollection
+-keepclassmembers class org.geometerplus.fbreader.formats.JavaEncodingCollection {
+    public static ** Instance();
+    public ** getEncoding(java.lang.String);
+    public ** getEncoding(int);
+		public boolean isEncodingSupported(java.lang.String);
+}
 -keep class org.geometerplus.fbreader.Paths
 -keepclassmembers class org.geometerplus.fbreader.Paths {
     public static ** cacheDirectory();
