--- a/proguard.cfg
+++ b/proguard.cfg
@@ -36,6 +36,14 @@
     public ** supportedFileType();
 }
 -keep class org.geometerplus.fbreader.formats.Encoding
+-keepclassmembers class org.geometerplus.fbreader.formats.Encoding {
+		public ** createConverter();
+}
+-keep class org.geometerplus.fbreader.formats.EncodingConverter
+-keepclassmembers class org.geometerplus.fbreader.formats.EncodingConverter {
+		public int convert(byte[],int,int,byte[],int);
+		public void reset();
+}
 -keep class org.geometerplus.fbreader.formats.JavaEncodingCollection
 -keepclassmembers class org.geometerplus.fbreader.formats.JavaEncodingCollection {
     public static ** Instance();
