separate methods Book.getEncoding & Book.getEncodingNoDetection

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -60,7 +60,7 @@
     public ** File;
     public ** getTitle();
     public ** getLanguage();
-    public ** getEncoding();
+    public ** getEncodingNoDetection();
     public void setTitle(**);
     public void setSeriesInfo(**,float);
     public void setLanguage(**);
