--- a/proguard.cfg
+++ b/proguard.cfg
@@ -67,6 +67,7 @@
     public void setEncoding(**);
     public void addAuthor(**,**);
     public void addTag(**);
+    public boolean save();
 }
 -keep class org.geometerplus.fbreader.library.Tag
 -keepclassmembers class org.geometerplus.fbreader.library.Tag {
