ZLEncodingConverter has a name; Rtf plugin as compilable again

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -41,6 +41,7 @@
 }
 -keep class org.geometerplus.fbreader.formats.EncodingConverter
 -keepclassmembers class org.geometerplus.fbreader.formats.EncodingConverter {
+    public ** Name;
 		public int convert(byte[],int,int,byte[],int);
 		public void reset();
 }
