BookReadingException can be thrown from native code

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -84,6 +84,9 @@
 		public void setBookTextModel(**);
 		public void setFootnoteModel(**);
 }
+-keepclassmembers class org.geometerplus.fbreader.bookmodel.BookReadingException {
+    public static void throwForFile(**,**);
+}
 
 -keepclasseswithmembernames class * {
     native <methods>;
