--- a/proguard.cfg
+++ b/proguard.cfg
@@ -50,7 +50,7 @@
     public static ** Instance();
     public ** getEncoding(java.lang.String);
     public ** getEncoding(int);
-		public boolean isEncodingSupported(java.lang.String);
+		public boolean providesConverterFor(java.lang.String);
 }
 -keep class org.geometerplus.fbreader.Paths
 -keepclassmembers class org.geometerplus.fbreader.Paths {
