encoding-related classes were moved to org.geometerplus.zlibrary.core.encodings package

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -35,18 +35,18 @@
 -keepclassmembers class org.geometerplus.fbreader.formats.FormatPlugin {
     public ** supportedFileType();
 }
--keep class org.geometerplus.fbreader.formats.Encoding
--keepclassmembers class org.geometerplus.fbreader.formats.Encoding {
+-keep class org.geometerplus.zlibrary.core.encodings.Encoding
+-keepclassmembers class org.geometerplus.zlibrary.core.encodings.Encoding {
 		public ** createConverter();
 }
--keep class org.geometerplus.fbreader.formats.EncodingConverter
--keepclassmembers class org.geometerplus.fbreader.formats.EncodingConverter {
+-keep class org.geometerplus.zlibrary.core.encodings.EncodingConverter
+-keepclassmembers class org.geometerplus.zlibrary.core.encodings.EncodingConverter {
     public ** Name;
 		public int convert(byte[],int,int,byte[],int);
 		public void reset();
 }
--keep class org.geometerplus.fbreader.formats.JavaEncodingCollection
--keepclassmembers class org.geometerplus.fbreader.formats.JavaEncodingCollection {
+-keep class org.geometerplus.zlibrary.core.encodings.JavaEncodingCollection
+-keepclassmembers class org.geometerplus.zlibrary.core.encodings.JavaEncodingCollection {
     public static ** Instance();
     public ** getEncoding(java.lang.String);
     public ** getEncoding(int);
