--- a/proguard.cfg
+++ b/proguard.cfg
@@ -27,6 +27,11 @@
     public ** getPath();
     public long size();
 }
+-keep class org.geometerplus.zlibrary.core.image.ZLImage
+-keep class org.geometerplus.zlibrary.core.image.ZLFileImage
+-keepclassmembers class org.geometerplus.zlibrary.core.image.ZLFileImage {
+		public <init>(...);
+}
 -keep class org.geometerplus.zlibrary.text.model.ZLTextModel
 -keep class org.geometerplus.fbreader.formats.PluginCollection
 -keepclassmembers class org.geometerplus.fbreader.formats.PluginCollection {
@@ -74,10 +79,12 @@
 -keepclassmembers class org.geometerplus.fbreader.library.Tag {
     public static ** getTag(**,**);
 }
+-keepclassmembers class org.geometerplus.fbreader.bookmodel.BookModelImpl {
+		public void addImage(**,**);
+}
 -keep class org.geometerplus.fbreader.bookmodel.NativeBookModel
 -keepclassmembers class org.geometerplus.fbreader.bookmodel.NativeBookModel {
 		public ** Book;
-		public void initImageMap(**[],int[],int[],**,**,int);
 		public void initInternalHyperlinks(**,**,int);
 		public void initTOC(**,int[],int[]);
 		public ** createTextModel(**,**,int,int[],int[],int[],int[],byte[],**,**,int);
