fixed encoding conversion for non-1-byte encodings

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -51,7 +51,7 @@
 -keep class org.geometerplus.zlibrary.core.encodings.EncodingConverter
 -keepclassmembers class org.geometerplus.zlibrary.core.encodings.EncodingConverter {
     public ** Name;
-		public int convert(byte[],int,int,byte[],int);
+		public int convert(byte[],int,int,char[]);
 		public void reset();
 }
 -keep class org.geometerplus.zlibrary.core.encodings.JavaEncodingCollection
