ContentsTree instead of ZLTextTreeModel

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -90,7 +90,8 @@
 -keepclassmembers class org.geometerplus.fbreader.bookmodel.NativeBookModel {
 		public ** Book;
 		public void initInternalHyperlinks(**,**,int);
-		public void initTOC(**,int[],int[]);
+		public void addTOCItem(**,int);
+		public void leaveTOCItem();
 		public ** createTextModel(**,**,int,int[],int[],int[],int[],byte[],**,**,int);
 		public void setBookTextModel(**);
 		public void setFootnoteModel(**);
