changed release date; no obfuscating for some classes

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -12,6 +12,9 @@
 -keep public class * extends android.content.ContentProvider
 -keep class * extends java.lang.Exception
 
+-keep class org.geometerplus.zlibrary.text.model.ZLTextPlainModel$EntryIteratorImpl { *; }
+-keep class org.geometerplus.zlibrary.text.view.ZLTextParagraphCursor$Processor { *; }
+
 -keep class org.geometerplus.zlibrary.core.library.ZLibrary
 -keepclassmembers class org.geometerplus.zlibrary.core.library.ZLibrary {
     public static ** Instance();
