jni/proguard changes for new package structure

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -68,8 +68,8 @@
 -keepclassmembers class org.geometerplus.fbreader.Paths {
     public static ** cacheDirectory();
 }
--keep class org.geometerplus.fbreader.library.Book
--keepclassmembers class org.geometerplus.fbreader.library.Book {
+-keep class org.geometerplus.fbreader.book.Book
+-keepclassmembers class org.geometerplus.fbreader.book.Book {
     public ** File;
     public ** getTitle();
     public ** getLanguage();
@@ -82,8 +82,8 @@
     public void addTag(**);
     public boolean save();
 }
--keep class org.geometerplus.fbreader.library.Tag
--keepclassmembers class org.geometerplus.fbreader.library.Tag {
+-keep class org.geometerplus.fbreader.book.Tag
+-keepclassmembers class org.geometerplus.fbreader.book.Tag {
     public static ** getTag(**,**);
 }
 -keepclassmembers class org.geometerplus.fbreader.bookmodel.BookModelImpl {
