--- a/proguard.cfg
+++ b/proguard.cfg
@@ -82,8 +82,8 @@
     public void addTag(**);
     public boolean save();
 }
--keep class org.geometerplus.fbreader.library.Tag
--keepclassmembers class org.geometerplus.fbreader.library.Tag {
+-keep class org.geometerplus.fbreader.book.Tag
+-keepclassmembers class org.geometerplus.fbreader.book.Tag {
     public static ** getTag(**,**);
 }
 -keepclassmembers class org.geometerplus.fbreader.bookmodel.BookModelImpl {
