--- a/proguard.cfg
+++ b/proguard.cfg
@@ -68,8 +68,8 @@
 -keepclassmembers class org.geometerplus.fbreader.Paths {
     public static ** cacheDirectory();
 }
--keep class org.geometerplus.fbreader.library.Book
--keepclassmembers class org.geometerplus.fbreader.library.Book {
+-keep class org.geometerplus.fbreader.book.Book
+-keepclassmembers class org.geometerplus.fbreader.book.Book {
     public ** File;
     public ** getTitle();
     public ** getLanguage();
